--- a/style/style.scss
+++ b/style/style.scss
@@ -1,3 +1,8 @@
 @import "./scss/settings";
-@import "./scss/navbar";
-@import "./scss/present";
+@import "./scss/point";
+@import "./scss/header";
+@import "./scss/skills";
+@import "./scss/contact";
+@import "./scss/footer";
+@import "./scss/stars";
+@import "./scss/swiper";
