--- a/style/style.scss
+++ b/style/style.scss
@@ -3,6 +3,6 @@
 @import "./scss/header";
 @import "./scss/skills";
 @import "./scss/contact";
-@import "./scss/footer";
 @import "./scss/stars";
 @import "./scss/swiper";
+@import "./scss/about";
