--- a/style/scss/_swiper.scss
+++ b/style/scss/_swiper.scss
@@ -34,27 +34,27 @@
 				}
 
 				.t-1 {
-					background: url("../../assets/img/projects/gaming-campus.png")
+					background: url("../assets/img/projects/gaming-campus.png")
 						center/cover;
 				}
 				.t-2 {
-					background: url("../../assets/img/projects/hackaton.png")
+					background: url("../assets/img/projects/hackaton.png")
 						center/cover;
 				}
 				.t-3 {
-					background: url("../../assets/img/projects/immo.png")
+					background: url("../assets/img/projects/immo.png")
 						center/cover;
 				}
 				.t-4 {
-					background: url("../../assets/img/projects/montagne.png")
+					background: url("../assets/img/projects/montagne.png")
 						center/cover;
 				}
 				.t-5 {
-					background: url("../../assets/img/projects/resto.png")
+					background: url("../assets/img/projects/resto.png")
 						center/cover;
 				}
 				.t-6 {
-					background: url("../../assets/img/projects/run.png")
+					background: url("../assets/img/projects/run.png")
 						center/cover;
 				}
 			}
